# SACI

./: .dockerignore  .gitignore  .gitmodules  DESIGN.md  README.md  TA4_GUI.md  asp_cpv_search.sh  deploy.yml  dockerfile  pyproject.toml  run_asp_test.sh  setup.cfg  webdev.sh
.github/workflows/: ci.yml  pipeline-tests.yml  python-tests.yml
examples/cpv01_mitm_mavlink/: cpv.py
examples/cpv01_mitm_mavlink/px4_quadcopter/: __init__.py  gcs_telemetry.py  px4_controller.py
examples/cpv02_gps_spoofing/: cpv.py  vuln.py
examples/px4_quadcopter_device/: __init__.py
saci/: __init__.py  __main__.py  atoms.py  deserializer.py  hypothesis.py  logging.py  loggingconf.py
saci/constrainers/: __init__.py  actuator_high_constrainer.py  base_constrainer.py  binary_constrainer.py  bruteforce_constrainer.py  c_constrainer.py  controller_high_constrainer.py  cyber_high_constrainer.py  fsm_constrainer.py  telemetry_high_constrainer.py
saci/identifier/: __init__.py  identifier.py  identifier_cpsv.py  identifier_cpv.py  identifier_cpv_original.py
saci/modeling/: __init__.py  annotation.py  capability.py  component.lp  cpv.lp  cpv.py  cpv_hypothesis.py  cpvpath.py  cpvsearch.lp  render.lp  rover.lp  vulnerability.py
saci/modeling/attack/: __init__.py  acoustic_attack_signal.py  base_attack_impact.py  base_attack_signal.py  base_attack_vector.py  binary_patching_attack.py  environmental_attack_signal.py  gnss_attack_signal.py  gps_attack_signal.py  image_attack_signal.py  magnetic_attack_signal.py  optical_attack_signal.py  packet_attack_signal.py  payload_firmware_attack.py  radio_attack_signal.py  serial_attack_signal.py
saci/modeling/behavior/: __init__.py  behavior.py  behaviors.py  string_behavior.py
saci/modeling/communication/: __init__.py  auth_comm.py  base_comm.py  external_input.py  protocol.py  unauth_comm.py
saci/modeling/device/: __init__.py  ardiscovery.py  battery.py  bluetooth.py  bms.py  camera.py  compass.py  component.py  componentid.py  controller.py  debug.py  depth_camera.py  device.py  dnn.py  dsmx.py  esc.py  expresslrs_backpack.py  ftp.py  gcs.py  gps.py  gyroscope.py  http.py  icmp.py  localizer.py  mavlink.py  microcontroller.py  motor.py  optical_flow.py  pwm_channel.py  serial.py  sik_radio.py  smbus.py  telemetry.py  telnet.py  webclient.py  webserver.py  wifi.py
saci/modeling/state/: __init__.py  global_state.py  operation_mode.py  state_graph.py  state_node.py  state_transition.py
saci/modeling/vulnerability/: __init__.py  base_vuln.py  pub_secret_vuln.py  spoofing_vuln.py
saci/orchestrator/: README.md  __init__.py  component_search.py  cpv_definitions.py  interactive_search.py  ml_search.py  orchestrator.py  search_2.py  search_3.py  search_comp.py  search_comp_attack.py  semantic_search.py  tool.py  workers.py
saci/orchestrator/cache/: cpv_embeddings.pkl
saci/webui/: data.py  db.py  excavate_import.py  scheduling.py  web.py  web_models.py
saci/webui/templates/: index.html  index.js
tests/: atoms.json  delivery3_greensight_v1.json  hypothesis.json  hypothesis_emi.json  hypothesis_rollover.json  hypothesis_rollover_plain.json  hypothesis_stop.json  mock_ta2.json  test_compass_permanent_spoofing_greensight.py  test_cpv_identification.py  test_db_conversions.py  test_pipeline.py  test_server_startup.py  test_web_server.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: AnnotationNode.tsx  App.tsx  CustomNode.tsx  main.tsx
web/src/components/: AnnotationNode.tsx  CPVsPanel.tsx  CustomNode.tsx  DeviceSelector.tsx  Flow.tsx  HypothesisCreatePanel.tsx  HypothesisSelector.tsx  HypothesisTestPanel.tsx  index.ts
web/src/mocks/: handlers.ts
web/src/pages/: HypothesisBuilder.css  HypothesisBuilder.tsx  mock-data.yml
(+83 files in other folders)
