[build-system]
requires = ["setuptools>=61.2", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "saci"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.11",
]
license = {text = "BSD 2 Clause"}
description = "Software-Aware CPV Identifier"
urls = {Homepage = "https://github.com/senpai-on-fire/saci"}
requires-python = ">= 3.11"
dependencies = [
    "networkx",
    "claripy",
    "clorm",
    "jinja2",
    "fastapi[standard]",
    "httpx",
    "matplotlib",
    "saci_db",
    "sqlalchemy~=2.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = ["pytest", "ruff"]
typechecking = ["pyright[nodejs]"]

[project.scripts]
saci = "saci.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "saci.__version__"}

[tool.uv.sources]
saci_db = {path = "./saci-database"}

[tool.pyright]
extraPaths = ["saci-database/"]
include = ["saci/"]

[tool.ruff]
line-length = 120 # this is too long. let's bring it down in the future

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    # "B",
    # flake8-simplify
    # "SIM",
    # isort
    "I",
]
ignore = [
    # I/O/l are considered "ambiguous" as variable names because some
    # fonts don't distinguish them well
    "E741",
]
