[metadata]
name = saci
version = attr: saci.__version__
url = https://github.com/senpai-on-fire/saci
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11
license = BSD 2 Clause
license_files = LICENSE
description = Software-Aware CPV Identifier
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    claripy
    clorm
    jinja2
    fastapi[standard]
    httpx
    matplotlib
python_requires = >= 3.10
packages = find:
include_package_data = True

[options.extras_require]
tests =
    pytest

[options.entry_points]
console_scripts =
    saci = saci.__main__:main
